--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -29,6 +29,14 @@ android {
     }
 }
 
+/*
+ * Implementazioni fatte: MAPS API: per coordinate, geolocalizzazione, e verificare se un determinato indirizzo esiste
+ * FIREBASE: database realtime, con questo gestiamo i dati degli utenti, come le loro informazioni, gli eventi
+ *      che creano e ai quali parteciperanno
+ * GLIDE API: serve per le immagini, facilità il caricamento delle immagini dallo Storage di Firebase
+ */
+
+
 dependencies {
 
     implementation 'com.google.firebase:firebase-analytics'
@@ -40,6 +48,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.google.firebase:firebase-storage:19.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -47,6 +57,12 @@ dependencies {
     //MAP
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
+    //cirularView
+    implementation 'com.mikhaellopez:circularimageview:4.1.1'
+    //auto-completamento google maps
+    implementation 'com.google.android.libraries.places:places:2.2.0'
+    //per superare 65k metodi
+    implementation "androidx.multidex:multidex:2.0.1"
 }
 //Firebase
 apply plugin: 'com.google.gms.google-services'
