--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".ModificaProfiloActivity"></activity>
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_key" />
 
-        <activity android:name=".RegistrazioneActivity"
-            android:parentActivityName=".LoginActivity"/>
+        <activity
+            android:name=".RegistrazioneActivity"
+            android:parentActivityName=".LoginActivity" />
         <activity
             android:name=".NotificaActivity"
             android:parentActivityName=".SettingsActivity" />
@@ -53,7 +56,9 @@
         <activity
             android:name=".PubblicaEventoActivity"
             android:parentActivityName=".MainActivity"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan">
+
+        </activity>
         <activity
             android:name=".ModificaPasswordActivity"
             android:parentActivityName=".SettingsActivity" />
